# fluent-bit-matchy

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: fluent-bit.yaml  matchy.yaml
scripts/: package.sh
src/: lib.rs
